# PS3

./: DEMO.md  README.md
Backend/: .gitignore  pyproject.toml
Backend/docs/: API.md  GENZ_GUIDE.md  IMPLEMENTATION.md  SOLUTION.md  implementation_plan.md  techstack.md
Backend/model_registry/test/: metadata.json  predictedhistory.json  training_data.csv
Backend/src/: main.py  server.py
Backend/src/price_optimizer/: __init__.py  inference.py  train.py
Backend/src/price_optimizer/api/: __init__.py  network_endpoints.py  price_api.py  visualization.py  visualization_endpoints.py
Backend/src/price_optimizer/config/: config.py
Backend/src/price_optimizer/data/: preprocessor.py
Backend/src/price_optimizer/env/: price_env.py
Backend/src/price_optimizer/models/: networks.py  p2p_price_memory.py  p2p_sac_agent.py  price_memory.py  sac_agent.py  standalone_memory_test.py  standalone_sac_test.py  test_p2p_memory.py  test_p2p_sac.py
Backend/src/price_optimizer/p2p/: __init__.py  config.py  example_config.json  network.py  standalone_test.py  test_network.py  types.py
Frontend/: package-lock.json  package.json
Frontend/app/: page.tsx
Frontend/components/: api-logger.tsx  model-history.tsx  network-config.tsx  network-insights.tsx  network-status.tsx  prediction-form.tsx  price-sales-chart.tsx  training-form.tsx
Frontend/lib/: api.ts  demo-data.ts
Frontend/types/: api.ts
docs/pear/: README.md  current_system.md  implementation_plan.md  phase1_p2p_foundation.md  phase2_distributed_memory.md  phase3_collaborative_learning.md  quick_start.md  user_guide.md  (+2 more)
(+14 files in other folders)
