[project]
name = "codeshetra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.8",
    "gymnasium>=1.0.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-multipart>=0.0.20",
    "pytorch-forecasting>=1.3.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "uvicorn>=0.34.0",
    "wandb>=0.19.6",
]
